--- a/src/less/global.less
+++ b/src/less/global.less
@@ -54,7 +54,7 @@ h5,
 h6 {
 	font-family: 'CompassSans-Regular', 'AvenirNextLTPro-Medium', serif;
 	font-weight: 700;
-	color: @text-color-heading;
+	color: @header-color;
 }
 
 .h1,
@@ -136,8 +136,6 @@ a:focus {
 }
 
 .btn-default {
-	border: 1px solid @theme-color;
-	background: @theme-color;
 	color: @white;
 	.transition(all 0.2s ease-in-out);
 
