--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -70,7 +70,7 @@
 				padding: 12px 11px;
 			}
 			@media(max-width:600px) {
-				padding: 6px 10px 0!important;
+      	padding: 9px 11px!important;
 			}
 
 			a {
@@ -160,8 +160,15 @@
 		min-width: 220px;
 		margin: 0;
 		@media(max-width:900px) {
-			max-width: 80% !important;
+			max-width: 80%;
 			margin: 15px auto !important;
+			padding-bottom: 20px;
+		}
+
+		@media(max-width:900px) {
+			max-width: none;
+			width: 100%;
+			margin: 15px 0 !important;
 			padding-bottom: 20px;
 		}
 
