--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -3,7 +3,8 @@
 
 .post-preview {
 	padding: 0 !important;
-	border: 1px solid #dadada;
+	box-shadow: 0 0 5px rgba(80, 82, 204, 0.20), 0px -1px 3px rgba(80, 82, 204, 0.20) !important;
+	    margin-bottom: 40px;
 
 	.post-content {
 		text-align: justify;
@@ -315,6 +316,7 @@
 		padding: 14px 20px;
 		line-height: 1;
 		height: 14px;
+		background: @button-color;
 		@media(max-width: 600px) {
 			padding: 13px 18px;
 			font-family: AvenirNextLTPro-Regular,serif;
