--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -5,11 +5,11 @@
 	footer
 ====================================================*/
 .main-footer {
-	background: linear-gradient(to bottom, rgba(0,255,196,0.2), rgba(41,58,63,0));
-	padding: 35px 10%;
-	color: white;
-	margin-top: 30px;
-	background-color: #0d193c;
+	background: linear-gradient(to bottom,rgba(0, 184, 255, 0.48),rgba(41,58,63,0));
+  padding: 35px 10%;
+  color: #fff;
+  margin-top: 30px;
+  background-color: #220c44;
 	box-shadow: inset 0 1px 6px 0 rgba(44,50,63,0.41);
 	display: flex;
 	justify-content: space-around;
