--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -6,7 +6,7 @@
   position: relative;
   width: auto;
   padding: 0;
-  background: #042149;
+  background-image: linear-gradient(114deg,#04A8FB 1%,#871faf 100%);
   z-index: 100;
   @media(max-width: 800px) {
     margin: auto;
