--- a/src/less/social.less
+++ b/src/less/social.less
@@ -1,38 +1,53 @@
+@facebook-color: #3b5998;
+@medium-color: #000;
+@twitter-color: #3cf;
+@tumblr-color: #35465c;
+@google-color: #dc4a38;
+@linkedin-color: #4875B4;
+@github-color: #000;
+@rss-color: #ff6501;
+
+
+
+
 .social-btns .btn,
-.social-btns .btn:before,
-.social-btns .btn .fa {
-  padding:0;
+.social-btns .btn .fa,
+.social-btns .btn:before {
+  padding: 0;
   transition: all 0.35s;
   transition-timing-function: cubic-bezier(0.31, -0.105, 0.43, 1.59);
-  color: #c1c1c1;
   font-size: 14px;
 
   &:hover {
-    cursor:pointer;
+    cursor: pointer;
   }
 }
+
 .social-btns .btn:before {
   top: 165%;
   left: -140%;
 }
-.social-btns .btn .fab {
-  -webkit-transform: scale(1);
-          transform: scale(1);
-           margin: 0 10px 0 0;
 
-              @media(max-width: 800px) {
-                -webkit-transform: scale(0.8);
-              }
+.social-btns .btn .fab {
+  transform: scale(1.17);
+  margin: 0 10px 0 0;
+  @media(max-width: 800px) {
+    -webkit-transform: scale(0.8);
+  }
 }
+
 .social-btns .btn.facebook:before {
   background-color: #3b5998;
 }
+
 .social-btns .btn.facebook .fa {
   color: #3b5998;
 }
+
 .social-btns .btn.twitter:before {
   background-color: #3cf;
 }
+
 .social-btns .btn.twitter .fa {
   color: #3cf;
 }
@@ -41,82 +56,89 @@
   color: #4875B4;
 }
 
-
 .social-btns .btn.google:before {
   background-color: #dc4a38;
 }
+
 .social-btns .btn.google .fa {
   color: #dc4a38;
 }
+
 .social-btns .btn.dribbble:before {
   background-color: #f26798;
 }
+
 .social-btns .btn.linkedin:before {
   background-color: #4875B4;
 }
+
 .social-btns .btn.tumblr:before {
   background-color: #35465c;
 }
+
 .social-btns .btn.dribbble .fa {
   color: #f26798;
 }
+
 .social-btns .btn.skype:before {
   background-color: #00aff0;
 }
+
 .social-btns .btn.skype .fab {
   color: #00aff0;
 }
+
 .social-btns .btn.rss:before {
   background-color: #ff6501;
 }
-.social-btns .btn.medium:before,
-.social-btns .btn.github:before
- {
+
+.social-btns .btn.github:before,
+.social-btns .btn.medium:before {
   background-color: #000;
 }
+
 .social-btns .btn.rss .fa {
   color: #ff6501;
 }
+
 .social-btns .btn:focus:before,
 .social-btns .btn:hover:before {
   top: -100%;
   left: -100%;
-  @media(max-width: 800px){
+  @media(max-width: 800px) {
     top: -75%;
     left: -75%;
   }
-
 }
-
 
 .social-btns .btn:focus .fab,
 .social-btns .btn:hover .fab,
-.social-btns .btn:hover .fas,
- {
+.social-btns .btn:hover .fas {
   color: #fff;
   -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
+
 .social-btns {
   height: 35px;
   margin: auto;
   display: flex;
-justify-content: space-between;
+  justify-content: space-between;
 }
+
 .widget .social-btns .btn {
   display: inline-block;
   background-color: #fff;
-  width: 35px;
-  height: 35px;
-  line-height: 35px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
   margin: 0 3px;
   text-align: center;
   position: relative;
   overflow: hidden;
-  border: 1px solid #ebebeb;
-  box-shadow: 0 5px 15px -5px rgba(0,0,0,0.08);
+  box-shadow: 0 0 3px 1px rgba(95, 93, 138, 0.15);
   opacity: 0.99;
-  padding:0;
+  padding: 0;
 }
 
 .post .social-btns .btn {
@@ -125,11 +147,11 @@ justify-content: space-between;
   line-height: 1;
 
   span {
-    z-index:20;
+    z-index: 20;
   }
 
   &:hover {
-    background:white;
+    background: white;
   }
 }
 
@@ -139,7 +161,7 @@ justify-content: space-between;
   height: 350%;
   position: absolute;
   -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .social-btns .btn:before {
@@ -148,9 +170,39 @@ justify-content: space-between;
   height: 340%;
   position: absolute;
   -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
+  transform: rotate(45deg);
 }
+
 .social-btns .btn .fa {
   font-size: 20px;
   vertical-align: middle;
+}
+
+.medium i {
+  color: lighten(@medium-color, 10%)
+}
+
+.facebook i {
+  color: lighten(@facebook-color, 20%)
+}
+
+.twitter i {
+  color: lighten(@twitter-color, 10%)
+}
+
+.google i {
+  color: lighten(@google-color, 10%)
+}
+
+.tumblr i {
+  color: lighten(@tumblr-color, 20%)
+}
+
+
+.github i {
+  color: lighten(@github-color, 10%)
+}
+
+.rss i {
+  color: lighten(@rss-color, 20%)
 }
