--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -4,7 +4,9 @@
 @theme-color: #0db0e2;        // theme color
 @secondary-color: #30b1a7;				// secondary theme color
 @hover-color: #40cebb;
-@bg-color: #efefef;					// Background color / secndary theme color
+@button-color: linear-gradient(135deg,rgb(79, 195, 136),rgb(33, 182, 183));
+@header-color: #153b52;
+@bg-color: #f9faff;					// Background color / secndary theme color
 @bg-color-light: #e0ecef;			// Light background color
 @bg-color-footer: #202020;			// Footer background color
 @bg-color-footer-dark: #111111;		// Footer dark background color
