--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -44,7 +44,7 @@
 
   .welcomevideo,
   iframe {
-    margin: 0 0 25px !important;
+    margin: 0 0 40px !important;
     height: 400px;
     display: block;
 
@@ -82,7 +82,7 @@
     flex-wrap: wrap;
     align-content: flex-start;
     flex-flow: row wrap;
-    margin: 0 30px 20px;
+    margin: 0 40px 20px;
 
     .meta-info {
       color: @text-color;
@@ -90,9 +90,8 @@
   }
 
   .about-author {
-    border: 1px solid #ececec;
     border-radius: 2px !important;
-    background: #f7f7f7 !important;
+    background: #f6fbfd !important;
     padding: 20px;
     margin: 10px 0;
     width: 42.5%;
@@ -142,30 +141,25 @@
     }
 
     .avatar-link {
-      width: 80px;
-      height: 80px;
       margin-bottom: 15px;
       display: inline-block;
       @media(max-width: 1040px) {
-        width: 80px;
-        height: 80px;
         margin: 0 auto 15px;
         display: block;
       }
 
       .avatar {
-        width: 80px;
-        height: auto;
+        width: 70px;
         margin: 0;
         .border-radius(50%);
-        height: 80px;
+        height: 70px;
       }
     }
 
     .details {
       width: 65%;
       display: inline-block;
-      margin-left: 5%;
+      margin-left: 6px;
       @media(max-width: 1040px) {
         text-align: center;
         width: 90%;
@@ -179,7 +173,7 @@
       font-weight: 100;
       float: left !important;
       font-size: 14px;
-      margin: 10 0 !important;
+      margin: 10px 0 !important;
       @media(max-width: 1040px) {
         text-align: center;
       }
@@ -230,7 +224,7 @@
 
 .page-series {
   .post-title {
-    margin: 40px 80px 0;
+    margin: 27px 28px 20px;
     @media(max-width: 600px) {
       font-size: 3em;
     }
