--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -96,8 +96,8 @@
 			}
 
 			i {
-				font-size: 13px;
-				margin: 0 10px 0 0;
+				font-size: 1opx;
+				margin: 10px 10px;
 				color: #9a9a9a;
 				@media(max-width: 600px) {
 					font-size: 20px;
