--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -65,7 +65,7 @@
 			a {
 				border: 0;
 		    color: #fff;
-		    background: #18809e;
+		    background: linear-gradient(-65deg,#4f91ab,#1d9e98);
 				padding: 3px 10px;
 				font-size: .95em;
 		    display: inline-block;
