--- a/src/less/post.less
+++ b/src/less/post.less
@@ -6,12 +6,17 @@
 		main post area
 	====================================================*/
 	.container {
-		margin: 20px auto 0;
 		padding: 0;
 		max-width: 1000px !important;
+
 		@media(max-width: 800px) {
 			margin: 0 0 20px 0 !important;
 			width: 100% !important;
+		}
+
+		article {
+			margin: 50px auto 0;
+			box-shadow: @shadow-color;
 		}
 	}
 
@@ -184,6 +189,7 @@
 		}
 
 		.author {
+
 			.avi {
 				width: 30px;
 				height: 30px;
@@ -642,6 +648,7 @@
 			line-height: 1.4;
 			margin-left: 20px;
 			padding-left: 20px;
+			display: block;
 		}
 
 		blockquote {
@@ -940,6 +947,7 @@
 		padding: 40px 60px;
 		margin: 20px 0;
 		min-height: 88px;
+		box-shadow: 0 0 5px rgba(80,82,204,.1),0 -1px 3px rgba(80,82,204,.1)!important;
 		@media(max-width: 1000px) {
 			padding: 30px 40px;
 			margin: 20px;
@@ -999,6 +1007,8 @@
 			font-size: 1.5em;
 			margin-bottom: 5px;
 			font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light';
+
+
 			@media(max-width: 600px) {
 				font-size: 1.3em;
 			}
