--- a/src/less/social.less
+++ b/src/less/social.less
@@ -1,14 +1,4 @@
-@facebook-color: #3b5998;
-@medium-color: #000;
-@twitter-color: #3cf;
-@tumblr-color: #35465c;
-@google-color: #dc4a38;
-@linkedin-color: #4875B4;
-@github-color: #000;
-@rss-color: #ff6501;
-
-
-
+@import "variables.less";
 
 .social-btns .btn,
 .social-btns .btn .fa,
