--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -6,7 +6,7 @@
 @hover-color: #40cebb;
 @button-color: linear-gradient(135deg,rgb(79, 195, 136),rgb(33, 182, 183));
 @header-color: #153b52;
-@bg-color: #f9faff;					// Background color / secndary theme color
+@bg-color: #ecf1f9;					// Background color / secndary theme color
 @bg-color-light: #e0ecef;			// Light background color
 @bg-color-footer: #202020;			// Footer background color
 @bg-color-footer-dark: #111111;		// Footer dark background color
@@ -20,3 +20,14 @@
 @text-post-header: #20809c;
 
 @base-url: 'https://hackersandslackers.com/';
+
+@facebook-color: #3b5998;
+@medium-color: #000;
+@twitter-color: #3cf;
+@tumblr-color: #35465c;
+@google-color: #dc4a38;
+@linkedin-color: #4875B4;
+@github-color: #000;
+@rss-color: #ff6501;
+
+@shadow-color: rgba(80,82,204,.1),0 -1px 3px rgba(80,82,204,.1)!important;
