--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -23,7 +23,7 @@
 			-ms-transition: all .2s ease;
 			-o-transition: all .2s ease;
 			transition: all .2s ease;
-			background: #eaecf9;;
+			background: #d7dfea;
 			flex-grow: 1;
 			text-align: center;
 
@@ -85,11 +85,14 @@
 
 		.newsletter {
 			button {
-				background: #26a2c7;
-				color: #FFFFFF;
 				width: 100%;
-				padding: 10px 20px;
+				background: linear-gradient(135deg,#40a270,#1f8ea7);
+				padding: 13px 20px;
+				font-size: 16px;
+				color: white;
 				border: 0;
+				text-transform: Uppercase;
+
 
 				span {
 					font-size: 14px;
@@ -137,8 +140,8 @@
 			}
 			.post-title {
 				color: #627e90;
-				line-height: 1.2;
-				letter-spacing: 1 !important;
+				line-height: 1.3;
+				letter-spacing: 0;
 				font-size: 16px;
 				margin: 0;
 				font-family: CompassSans-Regular,AvenirNextLTPro-Medium,AvenirNextLTPro-Light,sans-serif;
@@ -205,14 +208,13 @@
 
 	.recent-single-post {
 		.post-title {
-			color: #627e90;
+			color: #557082;
 			line-height: 1.4;
 			font-size: 15px;
 			margin: 0;
 			font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light', sans-serif;
 			font-weight: 100;
 			display: inline-block;
-			letter-spacing: 1px;
 
 
 			&:hover {
@@ -344,10 +346,9 @@
 			}
 
 			.date {
-				color: @text-color-light;
-				font-size: 12px;
-				opacity: 0.8;
-				margin-top: 10px;
+				color: #8091ab;
+		    font-size: 12px;
+		    opacity: .9;
 
 				i {
 					margin-right: 5px;
@@ -377,7 +378,7 @@
 
 		.form-group,
 		.input-group {
-			margin-bottom: 20px;
+			margin-bottom: 10px;
 			display: block;
 
 			.email {
@@ -385,7 +386,7 @@
 			}
 
 			.btn {
-				width: 100%;
+
 
 				span {
 					font-size: 12px;
