--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -3,7 +3,7 @@
 
 .post-preview {
 	padding: 0 !important;
-	box-shadow: 0 0 5px rgba(80, 82, 204, 0.20), 0px -1px 3px rgba(80, 82, 204, 0.20) !important;
+	box-shadow: @shadow-color;
 	    margin-bottom: 40px;
 
 	.post-content {
