--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -30,4 +30,4 @@
 @github-color: #000;
 @rss-color: #ff6501;
 
-@shadow-color: rgba(80,82,204,.1),0 -1px 3px rgba(80,82,204,.1)!important;
+@shadow-color: 0 0 5px rgba(80,82,204,.11);
