--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -134,9 +134,12 @@
 
 		&.series {
 			.title {
-				padding-bottom: 7px;
+				font-size: 1.5em;
+				font-weight: 500;
 				margin-bottom: 15px;
-				letter-spacing: 1.8px;
+				text-transform: uppercase;
+				font-family: CompassSans-Regular,AvenirNextLTPro-Medium,serif;
+				letter-spacing: 1px;
 			}
 			.post-title {
 				color: #627e90;
@@ -152,7 +155,7 @@
 			.recent-single-post{
 				border-bottom: 0;
 				padding: 0;
-				background: white;
+				background: linear-gradient(190deg,rgb(255, 255, 255) 0,rgba(99, 101, 202, 0.11));
 				margin-bottom: 15px;
 				overflow: hidden;
 				display: inline-block;
@@ -235,9 +238,10 @@
 
 	.text {
 		h1 {
-			 font-size: 1.3em;
-			 font-weight:700;
+			 font-size: 1.5em;
+			 font-weight:500;
 			 margin-bottom:15px;
+			 letter-spacing: 1px;
 		}
 		p {
 			margin: 0;
@@ -268,11 +272,12 @@
 	margin-top: 0;
 
 	.title {
-		margin-top: 0;
-		padding-bottom: 7px;
+		font-size: 1.5em;
+		font-weight: 500;
 		margin-bottom: 15px;
-		position: relative;
-		letter-spacing: 1.8px;
+		text-transform: uppercase;
+		font-family: CompassSans-Regular,AvenirNextLTPro-Medium,serif;
+		letter-spacing: 1px;
 	}
 
 	.google-plus {
