--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -4,7 +4,11 @@
 .post-preview {
 	padding: 0 !important;
 	box-shadow: @shadow-color;
-	    margin-bottom: 40px;
+	margin-bottom: 40px;
+
+	@media(max-width:600px){
+		margin-bottom: 20px;
+	}
 
 	.post-content {
 		text-align: justify;
