--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -52,6 +52,7 @@
 		font-size: 1em;
 		font-family: CompassSans-Regular;
 		font-weight: 300;
+		background: @theme-color;
 
 		@media(max-width: 800px){
 			font-size: .9em;
