--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: space-between;
   overflow: hidden;
-  box-shadow: 2px 2px 1px rgba(0, 0, 0, .1);
+  box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.2), -1px -1px 0px rgba(0,0,0,.1);
   transition: all .2s easout;
 
   @media(max-width: 800px) {
@@ -26,6 +26,9 @@
     background-position-y: center;
     border-radius: 0;
     transition: all .2s easout;
+    border: 1px solid #cccccc;
+    border-style: solid;
+    border-right: 0;
     /*background-color: white;*/
 
     @media(max-width: 800px) {
@@ -70,14 +73,14 @@
 
     h4 {
       margin: 0;
-      font-size: 1.1em;
+      font-size: 1.2em;
       font-weight: 500;
       line-height: 1.2;
       margin-bottom: 15px;
+      text-align: left;
 
       @media(max-width: 800px) {
         font-size: 1em;
-        line-height: 1.1;
         margin-bottom: 5px;
       }
     }
@@ -94,6 +97,7 @@
       -webkit-line-clamp: 4;
       -webkit-box-orient: vertical;
       overflow: hidden;
+      text-align: left;
       @media(max-width: 600px) {
         display: none;
       }
@@ -111,7 +115,8 @@
     a,
     h4,
     p,
-    span {
+    span,
+    i {
       color: #fff;
     }
   }
