--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -64,6 +64,7 @@
 			transition: 0.2s all ease-out;
 			border-radius: 2px;
 			background: #f3f3f3;
+			color: white;
 			@media(max-width:900px) {
 				width: fit-content !important;
 				height: fit-content;
@@ -71,6 +72,22 @@
 			}
 			@media(max-width:600px) {
       	padding: 9px 11px!important;
+			}
+
+			&.facebook {
+			  background-color: lighten(@facebook-color, 20%);
+			}
+
+			&.twitter {
+			  background-color: lighten(@twitter-color, 10%);
+			}
+
+			&.linkedin {
+			  background-color: lighten(@linkedin-color, 10%);
+			}
+
+			&.rss {
+			  background-color: lighten(@rss-color, 20%);
 			}
 
 			a {
@@ -96,9 +113,15 @@
 			}
 
 			i {
-				font-size: 1opx;
-				margin: 10px 10px;
-				color: #9a9a9a;
+				font-size: 14px;
+				margin: 10px 8px;
+				color: white;
+
+				@media(max-width: 800px) {
+				    margin: 0 5px 0 2px;
+						font-size: 16px;
+					}
+
 				@media(max-width: 600px) {
 					font-size: 20px;
 					margin: 0 !important;
@@ -107,7 +130,7 @@
 
 			span {
 				font-size: 14px;
-				color: #868686;
+				color: white;
 				@media(max-width: 600px) {
 					display: none;
 				}
@@ -125,14 +148,16 @@
 		a {
 			border: 0;
 			padding: 5px 11px;
-			color: #7794a7;
+			color: #fff;
 			line-height: 1.5em;
 			display: inline-block;
 			border-radius: 2px;
 			.transition(all 0.2s ease);
 			font-size: 0.9em;
 			margin: 5px 10px 5px 0;
-			background: #f2f2f2;
+
+
+
 
 			&:hover {
 				color: @white;
