--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -11,7 +11,7 @@
 @bg-color-footer: #202020;			// Footer background color
 @bg-color-footer-dark: #111111;		// Footer dark background color
 @text-color: #505050;				// Main text color
-@text-color-heading: #141624;   // Heading text color
+@text-color-heading: #153b52;   // Heading text color
 @text-color-footer: #b4b4b4;
 @text-color-light: #959595;			// Light text color
 @border-color: #ebebeb;
@@ -30,4 +30,4 @@
 @github-color: #000;
 @rss-color: #ff6501;
 
-@shadow-color: 0 0 5px rgba(80,82,204,.11);
+@shadow-color: 0 0 5px rgba(65, 67, 144, 0.15);
