--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -65,6 +65,7 @@
     background-size: cover;
     overflow: hidden;
 		min-height: 235px;
+		max-height: 300px;
 
 		@media(max-width: 800px){
 			display: none !important;
