--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -42,7 +42,7 @@
 	}
 
 	.widget {
-		 margin-right: 20px;
+		     margin-right: 25px!important;
 
 		&:first-of-type{
 			padding-top: 0;
@@ -241,6 +241,7 @@
 			 font-weight:500;
 			 margin-bottom:15px;
 			 letter-spacing: 1px;
+			 margin-top: 0;
 		}
 		p {
 			margin: 0;
