--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -12,7 +12,8 @@
   }
 }
 .meta,
-.post-meta {
+.post-meta,
+.tag {
   .nodejs {
     color: #69a202 !important;
     background-color: lighten(#83cc00, 55%);
