--- a/partials/widget-search.hbs
+++ b/partials/widget-search.hbs
@@ -1,7 +1,9 @@
 <!-- start widget -->
 <div class="widget text">
 	<h2 class="title" style="font-size: 1.5em;">Search</h4>
-    <input id="my-custom-input">
+		<div class="form-group">
+    	<input id="my-custom-input">
+		</div>
     <div id="my-custom-results"></div>
 </div>
 <!-- end widget -->
