--- a/partials/widget-tagcloud.hbs
+++ b/partials/widget-tagcloud.hbs
@@ -1,10 +1,10 @@
 <!-- start tag cloud widget -->
 <div class="widget">
 	<h4 class="title">Tags</h4>
-	<div class="tag-cloud">
+	<div class="tag-cloud tag">
 		{{#get "tags" limit="all" filter="slug:-[roundup,machine-learning,django,graph-databases,science-news,cybersecurity,blockchain,aws-api,kanban,codesnippetcorner,statistics,tableau-hacks]" include="count.posts" order="count.posts DESC" }}
 			{{#foreach tags}}
-				<a href="{{url}}">{{name}}</a>
+				<a href="{{url}}" class="">{{name}}</a>
 			{{/foreach}}
 		{{/get}}
 	</div>
