--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -4,29 +4,128 @@
 	sidebar
 ====================================================*/
 .sidebar {
+	#my-custom-input {
+		padding: 12px 5%;
+		width: 90%;
+		font-size: 1.2em;
+		font-family: CompassSans-Light,AvenirNextLTPro-Light,sans-serif!important;
+		font-weight: 200;
+		transition: .3s all;
+		outline: none;
+		-webkit-appearance: none;
+		border: 1px solid #ebebeb;
+		border-radius: 2px;
+
+
+		&:hover {
+			background: #ecf4f7;
+			border-color: #8fbbca;
+	}
+
+	&:focus {
+
+	}
+}
+
+	#my-custom-results {
+		box-shadow: 0 0 5px rgba(65,67,144,.15);
+		background: white;
+		align-items: center;
+
+		* {
+			transition: .3s all;
+		}
+
+
+		li {
+			width: 90%;
+			padding:10px 5%;
+			text-align: left;
+			display: flex;
+			justify-content: space-between;
+
+			&:nth-child(even) {
+				background: #f5f8fb;
+			}
+
+			&:hover{
+				background: lighten(@theme-color, 10%);
+				color: white;
+				border: 0;
+
+				a {
+					color: white;
+				}
+			}
+
+			img {
+				height: 50px;
+	    	width: 110px;
+	    	overflow: hidden;
+				margin-right: 15px;
+			}
+
+			div {
+				    width: 100%;
+				a {
+					display: block;
+					line-height: 1.4;
+					font-size: .9em;
+					-webkit-line-clamp: 2;
+					 font-weight: 600;
+				}
+
+				.tag {
+					display: block;
+					line-height: 1.5;
+
+
+					span {
+						font-size: .7em;
+						font-weight: 100;
+						line-height: 1.5;
+						padding: 4px 8px;
+						margin-top: 4px;
+						display: block;
+						width: fit-content;
+
+						i {
+							margin-right: 4px;
+							font-size: .7em;
+							display: none;
+						}
+					}
+
+
+				}
+			}
+
+
+		}
+	}
+
 	.tag-cloud {
 		display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    flex-wrap: wrap;
+		justify-content: space-between;
+		flex-direction: row;
+		flex-wrap: wrap;
 
 		a {
 			border: 0;
 			padding: 7px 12px;
-			color: #627e90;
+			color: #7299b3;
 			line-height: 1.5em;
 			display: inline-block;
 			margin: 0 10px 10px 0;
 			font-size: 14px!important;
-			-webkit-transition: all .2s ease;
-			-moz-transition: all .2s ease;
-			-ms-transition: all .2s ease;
-			-o-transition: all .2s ease;
-			transition: all .2s ease;
-			background: #d7dfea;
+			-webkit-transition: all 0.2s ease;
+			-moz-transition: all 0.2s ease;
+			-ms-transition: all 0.2s ease;
+			-o-transition: all 0.2s ease;
+			transition: all 0.2s ease;
+			background: #dbe7f7;
 			flex-grow: 1;
 			text-align: center;
-
 			.transition(all 0.2s ease);
 			@media(max-width: 1000px) {
 				font-size: 0.77em !important;
@@ -42,9 +141,9 @@
 	}
 
 	.widget {
-		     margin-right: 25px!important;
+		margin-right: 25px!important;
 
-		&:first-of-type{
+		&:first-of-type {
 			padding-top: 0;
 		}
 
@@ -54,27 +153,27 @@
 			justify-content: space-between;
 			margin: 0 !important;
 
-			i,
-			.fab {
+			.fab,
+			i {
 				margin: 0 !important;
 			}
+			@media (max-width: 1000px) {
+				a {
+					font-size: 12px !important;
+				}
 
-					@media (max-width: 1000px) {
-						a {
-							font-size: 12px !important;
-						}
-						li {
-							border: 0 !important;
-							padding: 0 !important;
-							}
+				li {
+					border: 0 !important;
+					padding: 0 !important;
+				}
 
-					i,
-					.fab {
-						font-size: 16px;
-						margin: 0 !important;
-					}
+				.fab,
+				i {
+					font-size: 16px;
+					margin: 0 !important;
 				}
 			}
+		}
 
 		.fb {
 			height: 220px;
@@ -90,7 +189,6 @@
 				border: 0;
 				text-transform: Uppercase;
 
-
 				span {
 					font-size: 14px;
 				}
@@ -102,22 +200,22 @@
 
 			input {
 				font-weight: 100;
-				transition: all .3s all;
+				transition: all 0.3s all;
 
 				&::placeholder {
-					opacity:0.7;
+					opacity: 0.7;
 				}
 
-				&:hover{
+				&:hover {
 					background: #e5f9ff;
 					border-color: #bbd8e2;
 
 					&::placeholder {
-						opacity:0.1;
+						opacity: 0.1;
 					}
 				}
 
-				&:focus{
+				&:focus {
 					background: white;
 				}
 			}
@@ -138,6 +236,7 @@
 				font-family: CompassSans-Regular,AvenirNextLTPro-Medium,serif;
 				letter-spacing: 1px;
 			}
+
 			.post-title {
 				color: #627e90;
 				line-height: 1.3;
@@ -149,30 +248,31 @@
 				display: inline-block;
 			}
 
-			.recent-single-post{
+			.recent-single-post {
 				border-bottom: 0;
 				padding: 0;
 				background: linear-gradient(190deg,rgb(255, 255, 255) 0,rgba(99, 101, 202, 0.11));
 				margin-bottom: 15px;
 				overflow: hidden;
 				display: inline-block;
-    		align-items: center;
-    		display: flex;
+				align-items: center;
+				display: flex;
 			}
+
 			.series-image {
 				height: 80px;
-		    width: 90px;
+				width: 90px;
 				min-width: 90px;
-		    display: flex;
-		    align-items: center;
-		    background-size: cover!important;
-		    margin-right: 20px;
-		    border-radius: 2px;
-
+				display: flex;
+				align-items: center;
+				background-size: cover!important;
+				margin-right: 20px;
+				border-radius: 2px;
 				@media(max-width: 1000px) {
 					display: none;
 				}
 			}
+
 			& > a {
 				display: none;
 			}
@@ -190,20 +290,19 @@
 				&:nth-of-type(1) {
 					display: none;
 				}
-
 			}
 
 			p {
 				color: #636363;
-		    font-size: 13px;
-		    opacity: .7;
-		    margin: 0;
-		    white-space: inherit;
-		    width: aauto;
-		    display: inline-block;
-		    line-height: 1.5;
+				font-size: 13px;
+				opacity: 0.7;
+				margin: 0;
+				white-space: inherit;
+				width: aauto;
+				display: inline-block;
+				line-height: 1.5;
 				width: auto;
-		    padding-right: 10px;
+				padding-right: 10px;
 			}
 		}
 	}
@@ -217,7 +316,6 @@
 			font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light', sans-serif;
 			font-weight: 100;
 			display: inline-block;
-
 
 			&:hover {
 				color: @hover-color;
@@ -237,12 +335,13 @@
 
 	.text {
 		h1 {
-			 font-size: 1.5em;
-			 font-weight:500;
-			 margin-bottom:15px;
-			 letter-spacing: 1px;
-			 margin-top: 0;
+			font-size: 1.5em;
+			font-weight: 500;
+			margin-bottom: 15px;
+			letter-spacing: 1px;
+			margin-top: 0;
 		}
+
 		p {
 			margin: 0;
 			font-size: 15px;
@@ -251,7 +350,6 @@
 	}
 
 	.post-title {
-
 		a {
 			color: #208cad;
 			font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light', sans-serif;
@@ -312,10 +410,7 @@
 		}
 	}
 
-
-
 	.recent-post {
-
 		a {
 			margin: 0 !important;
 		}
@@ -352,8 +447,8 @@
 
 			.date {
 				color: #8091ab;
-		    font-size: 12px;
-		    opacity: .9;
+				font-size: 12px;
+				opacity: 0.9;
 
 				i {
 					margin-right: 5px;
@@ -391,8 +486,6 @@
 			}
 
 			.btn {
-
-
 				span {
 					font-size: 12px;
 					text-transform: capitalize;
