added text widget back

--- a/default.hbs
+++ b/default.hbs
@@ -17,7 +17,7 @@
 
 	{{! Scripts }}
 	<script type="text/javascript" src="https://hackersandslackers.com/public/ghost-sdk.min.js"></script>
-	
+	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
 	{{#is "post"}}
 		<meta property="og:image" content="{{img_url feature_image}}">
 	{{else}}
