--- a/partials/postscripts.hbs
+++ b/partials/postscripts.hbs
@@ -1,3 +1,3 @@
 <script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
 <script>hljs.initHighlightingOnLoad();</script>
-{{#has author="Matt Alhonte"}}<script src="{{asset "/js/includes/highlight.pack.js"}}"></script>{{/has}}
+{{#has author="Matt Alhonte"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}
