--- a/src/less/post.less
+++ b/src/less/post.less
@@ -683,7 +683,8 @@
 			margin: 10px 0 20px;
 		}
 		@media(max-width: 800px) {
-			margin: 35px 20px 10px;
+			margin: 35px 35px 10px;
+			font-size: .85em;
 		}
 	}
 
