--- a/default.hbs
+++ b/default.hbs
@@ -19,8 +19,10 @@
 
 	{{! Scripts }}
 	<script type="text/javascript" src="https://hackersandslackers.com/public/ghost-sdk.min.js"></script>
+	<script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
 	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
 	<script src="{{asset "/js/includes/stitch.min.js"}}"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
 	{{#is "post"}}
 		<meta property="og:image" content="{{img_url feature_image}}">
 	{{else}}
