--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -23,7 +23,7 @@
 	{{^is "author"}}
 		{{> widget-sendgrid}}
 		{{> widget-tagcloud}}
-		{{> widget-facebook}}
+		{{!--{{> widget-facebook}}--}}
 	{{/is}}
 	{{^is "page,author"}}
 		{{> widget-twitter}}
