--- a/partials/widget-search.hbs
+++ b/partials/widget-search.hbs
@@ -1,6 +1,6 @@
 <!-- start widget -->
 <div class="widget text">
-	<h2 class="title" style="font-size: 1.5em;">Search</h4>
+	<h4 class="title">Search</h4>
 		<div class="form-group">
     	<input id="my-custom-input">
 		</div>
