--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -22,8 +22,8 @@
 		align-items: center;
 
 		a {
-			color: @text-post-header;
-			background: #F2F2F2;
+			color: #7299b3;
+			background: #dbe7f7;
 			font-size: 0.8em;
 			margin-right: 15px;
 			transition: all 0.3s;
@@ -207,8 +207,8 @@
 		float: none;
 		margin: 20px 0;
 		@media(max-width: 800px) {
-			width: 100%;
-			margin: 20px auto;
+			width: 90%;
+			margin: 20px auto !important;
 		}
 	}
 
