--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -27,10 +27,11 @@
 
 	<!-- scripts -->
 	<script src="{{asset "/js/includes/secret.js"}}"></script>
+	{{#has author="Matt Alhonte"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}
 	<script src="{{asset "/js/main.min.js"}}"></script>
-	{{#is "post"}} {{> postscripts}}  {{/is}}
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
 	<!--<script src="{{asset "/js/includes/ghost-search.min.js"}}"></script>-->
+	{{^is "post"}}
 	<script src="https://cdn.jsdelivr.net/npm/ghost-search@0.1.0/dist/ghost-search.min.js"></script>
 	<script type="text/javascript">
     let ghostSearch = new GhostSearch({
@@ -62,8 +63,9 @@
 						'<span class="tag "> <span class="' + tag.slug + '"><i class="fas fa-tags"></i> ' + tag.name + '</span></span></div> \n '+
 						'</li>';
         }
-    })
+    });
 </script>
+	{{/is}}
 	{{ghost_foot}}
 </body>
 </html>
