--- a/src/less/post.less
+++ b/src/less/post.less
@@ -15,7 +15,7 @@
 		}
 
 		article {
-			margin: 50px auto 0;
+			margin: 70px auto 0;
 			box-shadow: @shadow-color;
 
 			@media(max-width: 800px) {
@@ -171,6 +171,10 @@
 			padding: 6px 12px;
 			height: 25px;
 
+			@media(max-width: 600px){
+				 padding: 4px 10px;
+			}
+
 			i,
 			span {
 				font-weight: 500 !important;
@@ -201,7 +205,6 @@
 		}
 
 		.author {
-
 			.avi {
 				width: 30px;
 				height: 30px;
@@ -217,6 +220,12 @@
 			span {
 				text-transform: capitalize;
 				color: #467192;
+			}
+		}
+
+		.date {
+			@media(max-width: 600px) {
+				display:none !important;
 			}
 		}
 
@@ -330,7 +339,7 @@
 			line-height: 1.5 !important;
 			font-family: 'AvenirNextLTPro-Regular';
 			color: #1a6948;
-			font-size: 1em;
+			font-size: 1.08em;
 			width: auto;
 			margin: 0;
 			text-align: justify;
@@ -830,6 +839,7 @@
 
 				 @media(max-width: 600px) {
 					   margin-left: 0;
+						 font-size: 1.08em;
 				 }
 
 				 &::before {
