--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -228,17 +228,10 @@
 		}
 
 		&.series {
-			.title {
-				font-size: 1.5em;
-				font-weight: 500;
-				margin-bottom: 15px;
-				text-transform: uppercase;
-				font-family: CompassSans-Regular,AvenirNextLTPro-Medium,serif;
-				letter-spacing: 1px;
-			}
+
 
 			.post-title {
-				color: #627e90;
+				color: #455f6f;
 				line-height: 1.3;
 				letter-spacing: 0;
 				font-size: 16px;
@@ -251,7 +244,8 @@
 			.recent-single-post {
 				border-bottom: 0;
 				padding: 0;
-				background: linear-gradient(190deg,rgb(255, 255, 255) 0,rgba(99, 101, 202, 0.11));
+				/*background: linear-gradient(190deg,rgb(255, 255, 255) 0,rgba(99, 101, 202, 0.11));*/
+				background: #dce5ef;
 				margin-bottom: 15px;
 				overflow: hidden;
 				display: inline-block;
@@ -293,7 +287,7 @@
 			}
 
 			p {
-				color: #636363;
+				color: #444444;
 				font-size: 13px;
 				opacity: 0.7;
 				margin: 0;
@@ -309,7 +303,7 @@
 
 	.recent-single-post {
 		.post-title {
-			color: #557082;
+			color: #455f6f;
 			line-height: 1.4;
 			font-size: 15px;
 			margin: 0;
@@ -345,7 +339,8 @@
 		p {
 			margin: 0;
 			font-size: 15px;
-			line-height: 1.75;
+			line-height: 1.65;
+			padding-right: 44px;
 		}
 	}
 
@@ -369,13 +364,23 @@
 	margin-bottom: 65px;
 	margin-top: 0;
 
-	.title {
-		font-size: 1.5em;
-		font-weight: 500;
+	h1 {
 		margin-bottom: 15px;
+		text-transform: uppercase;
+		font-size: 1.5em;
+		text-transform: uppercase;
+    font-family: CompassSans-Regular,AvenirNextLTPro-Medium,serif;
+		color: @header-color;
+	}
+
+	.title {
+		font-size: 1em;
+		font-weight: 500;
+		margin-bottom: 8px;
 		text-transform: uppercase;
 		font-family: CompassSans-Regular,AvenirNextLTPro-Medium,serif;
 		letter-spacing: 1px;
+		color: @header-color;
 	}
 
 	.google-plus {
@@ -411,8 +416,10 @@
 	}
 
 	.recent-post {
+		margin-top: 13px;
 		a {
 			margin: 0 !important;
+			color: #455f6f;
 		}
 
 		single-author img {
@@ -425,9 +432,9 @@
 
 		.recent-single-post,
 		.single-author {
-			border-bottom: 1px dashed @border-color;
-			padding-bottom: 14px;
-			margin-bottom: 14px;
+			border-bottom: 1px solid #d5dde8;
+			padding-bottom: 17px;
+			margin-bottom: 17px;
 			line-height: 1.35;
 
 			.post-title,
@@ -449,6 +456,7 @@
 				color: #8091ab;
 				font-size: 12px;
 				opacity: 0.9;
+				margin-top: 5px;
 
 				i {
 					margin-right: 5px;
