--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -17,7 +17,7 @@
       <h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
         <h5 class="post-excerpt">{{excerpt words="20"}}</h5>
     </div>
-    {{#has tag="Roundup">}}
+    {{#has tag="Roundup"}}
     <div class="post-content">
       {{content words="80"}}
     </div>
