search bar visuals

--- a/partials/widget-search.hbs
+++ b/partials/widget-search.hbs
@@ -1,8 +1,8 @@
 <!-- start widget -->
 <div class="widget text">
-	<h4 class="title">Search</h4>
 		<div class="form-group">
-    	<input id="my-custom-input">
+    	<input placeholder="Search" id="my-custom-input"  value="" name="search">
+			<i class="far fa-search"></i>
 		</div>
     <div id="my-custom-results"></div>
 </div>
