--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -4,6 +4,28 @@
 	sidebar
 ====================================================*/
 .sidebar {
+
+	.form-group{
+		position: relative;
+
+		i {
+			position: absolute;
+			top: 32%;
+			right: 18px;
+		}
+
+		&:hover {
+			#my-custom-input {
+			background: #ecf4f7;
+			border-color: #8fbbca;
+			cursor: text;
+		}
+
+			i {
+				color: #1b7382;
+			}
+	}
+
 	#my-custom-input {
 		padding: 12px 5%;
 		width: 90%;
@@ -17,14 +39,12 @@
 		border-radius: 2px;
 
 
-		&:hover {
-			background: #ecf4f7;
-			border-color: #8fbbca;
-	}
 
 	&:focus {
 
 	}
+
+
 }
 
 	#my-custom-results {
@@ -103,6 +123,7 @@
 
 		}
 	}
+}
 
 	.tag-cloud {
 		display: flex;
@@ -288,7 +309,7 @@
 
 			p {
 				color: #444444;
-				font-size: 13px;
+				font-size: 12px;
 				opacity: 0.7;
 				margin: 0;
 				white-space: inherit;
