--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -29,7 +29,7 @@
 	#my-custom-input {
 		padding: 12px 5%;
 		width: 90%;
-		font-size: 1.2em;
+		font-size: 1em;
 		font-family: CompassSans-Light,AvenirNextLTPro-Light,sans-serif!important;
 		font-weight: 200;
 		transition: .3s all;
@@ -266,7 +266,7 @@
 				border-bottom: 0;
 				padding: 0;
 				/*background: linear-gradient(190deg,rgb(255, 255, 255) 0,rgba(99, 101, 202, 0.11));*/
-				background: #dce5ef;
+				background: #f4f9ff;
 				margin-bottom: 15px;
 				overflow: hidden;
 				display: inline-block;
@@ -328,7 +328,7 @@
 			line-height: 1.4;
 			font-size: 15px;
 			margin: 0;
-			font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light', sans-serif;
+			font-family: 'AvenirNextLTPro-Regular', 'AvenirNextLTPro-Light', sans-serif;
 			font-weight: 100;
 			display: inline-block;
 
@@ -368,7 +368,7 @@
 	.post-title {
 		a {
 			color: #208cad;
-			font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light', sans-serif;
+			font-family: 'AvenirNextLTPro-Regular', 'AvenirNextLTPro-Light', sans-serif;
 			transition: all 0.2s ease;
 			font-size: 15px !important;
 			font-weight: 500 !important;
@@ -395,13 +395,13 @@
 	}
 
 	.title {
-		font-size: 1em;
-		font-weight: 500;
-		margin-bottom: 8px;
-		text-transform: uppercase;
-		font-family: CompassSans-Regular,AvenirNextLTPro-Medium,serif;
-		letter-spacing: 1px;
-		color: @header-color;
+		font-size: 1.2em;
+    font-weight: 600;
+    margin-bottom: 8px;
+    text-transform: uppercase;
+    font-family: CompassSans-Regular,AvenirNextLTPro-Medium,serif;
+    letter-spacing: 2px;
+    color: #1f5373;
 	}
 
 	.google-plus {
@@ -460,7 +460,7 @@
 
 			.post-title,
 			.single-author-name {
-				font-family: 'AvenirNextLTPro-Medium', 'AvenirNextLTPro-Light', sans-serif;
+				font-family: 'AvenirNextLTPro-Regular', 'AvenirNextLTPro-Light', sans-serif;
 				.transition(all 0.2s ease);
 				font-weight: 100;
 				@media(max-width: 600px) {
