--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -6,7 +6,7 @@
   position: relative;
   width: auto;
   padding: 0;
-  background-image: linear-gradient(164deg,#04a8fb 1%,#491FDC 100%);
+  background-image: linear-gradient(164deg,#029be8 1%,#2e2ca9 100%);
   z-index: 100;
   @media(max-width: 800px) {
     margin: auto;
@@ -22,7 +22,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 30px;
+    padding: 20px 30px;
     @media(max-width: 800px) {
       padding: 0;
     }
