--- a/partials/widget-search.hbs
+++ b/partials/widget-search.hbs
@@ -1,9 +1,9 @@
 <!-- start widget -->
 <div class="widget text">
 		<div class="form-group">
-    	<input placeholder="Search" id="my-custom-input"  value="" name="search">
+    	<input placeholder="Search" id="search" value="" name="search">
 			<i class="far fa-search"></i>
 		</div>
-    <div id="my-custom-results"></div>
+    <div id="search-results"></div>
 </div>
 <!-- end widget -->
