search broke for no reason

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -36,8 +36,8 @@
 
 	<script type="text/javascript">
     let ghostSearch = new GhostSearch({
-        input:   '#search',
-        results: '#search-results',
+        input:   '#ghost-search-field',
+        results: '#ghost-search-results',
         options: {
 						limit: 5,
             keys: [
