--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -7,7 +7,7 @@
 	.form-group {
 		position: relative;
 
-		#search {
+		#ghost-search-field {
 			box-shadow: 0 0 5px rgba(65,67,144,.15);
 			background: white;
 			align-items: center;
@@ -40,7 +40,7 @@
 		}
 	}
 
-	#search-results {
+	#ghost-search-results {
 		padding: 12px 5%;
 		width: 90%;
 		font-size: 1em;
