ghost is obnoxious

--- a/assets/js/includes/footer.hbs
+++ b/assets/js/includes/footer.hbs
@@ -32,8 +32,8 @@
 	<script type="text/javascript" src="{{asset "js/includes/ghost-search.min.js"}}"></script>
 	<script type="text/javascript">
     let ghostSearch = new GhostSearch({
-        input:   '#my-custom-input',
-        results: '#my-custom-results',
+        input:   '#ghost-search-field',
+        results: '#ghost-search-results',
         options: {
             keys: [
                 'title',
