trying another fix

--- a/default.hbs
+++ b/default.hbs
@@ -19,6 +19,7 @@
 
 	{{! Scripts }}
 	<script type="text/javascript" src="https://hackersandslackers.com/public/ghost-sdk.min.js"></script>
+	<script> console.log(ghost.url.api()) </script>
 	<script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
 	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
 	<script src="{{asset "/js/includes/stitch.min.js"}}"></script>
