--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -26,12 +26,15 @@
 
 
 	<!-- scripts -->
+	<script src="{{asset "/js/includes/secret.js"}}"></script>
 	<script src="{{asset "/js/includes/stitch.min.js"}}"></script>
 	<script src="{{asset "/js/includes/swiper.min.js"}}"></script>
 	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
-	<script src="{{asset "/js/includes/secret.js"}}"></script>
+	<script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
 	<script src="{{asset "/js/main.min.js"}}"></script>
-	{{#is "post"}} {{> postscripts}}  {{/is}}
+
+	<script>hljs.initHighlightingOnLoad();</script>
+	{{#has author="Matt Alhonte"}}<script src="{{asset "/js/includes/highlight.pack.js"}}"></script>{{/has}}
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
 	<!--<script src="{{asset "/js/includes/ghost-search.min.js"}}"></script>-->
 	<script src="https://cdn.jsdelivr.net/npm/ghost-search@0.1.0/dist/ghost-search.min.js"></script>
