--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -152,7 +152,7 @@
 		float: right;
 		display: flex;
 		justify-content: space-between;
-		padding: 35px 40px 0 0;
+		padding: 30px 40px 0 0;
 		margin: 0;
 		list-style: none;
 
@@ -174,7 +174,7 @@
 
 			a {
 				color: #fff;
-		    font-family: 'CompassSans-Medium',serif;
+		    font-family: 'CompassSans-Regular',serif;
 		    text-transform: uppercase;
 				font-size: 16px;
 				font-weight: 300;
