--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -34,7 +34,7 @@
 	<script src="{{asset "/js/main.min.js"}}"></script>
 
 	<script>hljs.initHighlightingOnLoad();</script>
-	{{#has author="Matt Alhonte"}}<script src="{{asset "/js/includes/highlight.pack.js"}}"></script>{{/has}}
+	{{#has author="Matt Alhonte"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
 	<!--<script src="{{asset "/js/includes/ghost-search.min.js"}}"></script>-->
 	<script src="https://cdn.jsdelivr.net/npm/ghost-search@0.1.0/dist/ghost-search.min.js"></script>
