--- a/default.hbs
+++ b/default.hbs
@@ -18,6 +18,8 @@
 	{{! Scripts }}
 	<script type="text/javascript" src="https://hackersandslackers.com/public/ghost-sdk.min.js"></script>
 	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
+	<script src="{{asset "/js/includes/secret.js"}}"></script>
+	<script src="{{asset "/js/includes/stitch.min.js"}}"></script>
 	{{#is "post"}}
 		<meta property="og:image" content="{{img_url feature_image}}">
 	{{else}}
